Corrected BarNav issue on mobile device

--- a/portfolio/assets/css/portfolio.css
+++ b/portfolio/assets/css/portfolio.css
@@ -29,8 +29,8 @@ a, a:hover, a:focus, a:active, a.active {
 		width: 100%;
 		height: 100%;
 		opacity: 0;
-		/*background: rgba(124, 190, 255, .8);*/
-		background: rgba(221, 59, 42, .8);
+		background: rgba(124, 190, 255, .8);
+		/*background: rgba(221, 59, 42, .8);*/
 		-webkit-transition: all ease .5s;
 		-moz-transition: all ease .5s;
 		transition: all ease .5s;
